--- a/docassemble/VtFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VtFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,6 +1,6 @@
 #############TO-DO LIST#############
 
-# trying to gather and do the math for each net value for car, real estate, etc. and cycle through "is there another". For example, if someone enters the market value of a car, determine the net value for vehicle(s) and show the net values.
+# gather and do the math for each net value for assets - did vehicles and real estate
 
 # If someone says they don't have unemployment or other income, the interview stops
 
@@ -24,8 +24,12 @@ include:
 ---
 objects:
   - vehicles: DAList.using(object_type=DAObject, complete_attribute="complete", ask_number=True)
-  #- real_estate: DAList.using(object_type=DAObject, complete_attribute="amount_owed")
+  - real_estate: DAList.using(object_type=DAObject, complete_attribute="complete", ask_number=True)
+  - other_assets: DAList.using(object_type=DAObject, complete_attribute="complete", ask_number=True)
   #- jobs: ALItemizedJobList.using(complete_attribute='complete', ask_number=True)
+---
+
+################ Gathering vehicle info ################
 ---
 code: |
   vehicles[i].description
@@ -58,6 +62,8 @@ question: |
 fields:      
   - How many cars, trucks or other vehicles do you have?: vehicles.target_number
     datatype: integer
+  - note: |
+      We will ask for the value of each.
     
 ---
 id: Describe vehicle
@@ -80,27 +86,9 @@ fields:
   - What is it's market value? How much would you get if you sold it?: vehicles[i].market_value
     maxlength: 76
     datatype: currency
-  - If you owe money on the vehicle, how much do you owe? Enter 0 if you own it outright.: vehicles[i].amount_owed
+  - If you have a loan or owe money on the vehicle, how much do you owe? Enter 0 if you own it outright.: vehicles[i].amount_owed
     maxlength: 76
     datatype: currency
-
-#---
-#id: Another vehicle
-#question: |
-#  List of vehicles
-#subquestion: |
-#  You have told us about these vehicles:
-#  
-#  % for item in vehicles:
-#    * ${ item.description }
-#  % endfor
-#
-#fields:
-#  - Do you another car, truck or vehicle?: vehicles.there_is_another
-#    input type: radio
-#    choices:
-#      - Yes: True
-#      - No: False
 ---
 id: Display vehicle net values
 continue button field: user_sees_vehicle_net_values
@@ -112,12 +100,170 @@ subquestion: |
   If any of these are not correct, go back a screen or two and change your numbers.
 
   % for item in vehicles:
-    ${ item.description } 
+    **${ item.description }** 
     
     * Net value = ${ currency(item.net_value) }
     
   % endfor
+  
+################ Gather real estate info ################
+---
+code: |
+  real_estate[i].description
+  real_estate[i].amount_owed
+  real_estate[i].complete=True
+---
+###To determine the net value for real estate###
+code: |
+  total = real_estate[i].market_value
+  total -= real_estate[i].amount_owed
+  real_estate[i].net_value = total
+---
+id: Real estate
+question: |
+  Real estate
+fields:
+  - "Do you have any real estate like a house, building or land?": real_estate.there_are_any
+    input type: radio
+    choices:
+      - Yes: True
+      - No: False
+      
+validation code: |
+  if not real_estate.there_are_any:
+    real_estate.target_number = 0
+---
+id: How many real estate
+question: |
+  How many pieces of real estate
+fields:      
+  - How many houses, buildings or land parcels do you own?: real_estate.target_number
+    datatype: integer
+  - note: |
+      We will ask for the value of each.
+    
+---
+id: Describe real estate
+question: |
+  Describe the ${ ordinal(i) } piece of real esate
+subquestion: |
 
+  % if i > 0:
+  You have told us about these already:
+  
+  % for item in real_estate.complete_elements():
+  * ${ item.description }
+  
+  Now tell us about the next piece of real estate.
+  % endfor
+  % endif
+fields:     
+  - Short description of real estate. Examples -- house I live in, condo I live in, mobile home I live in, vacation camp, home I rent out, building for my business, land I own: real_estate[i].description
+    maxlength: 76
+  - What is it's market value? How much would you get if you sold it?: real_estate[i].market_value
+    maxlength: 76
+    datatype: currency
+  - If you have a mortgage or owe money on the real estate, how much do you owe? Enter 0 if you own it outright.: real_estate[i].amount_owed
+    maxlength: 76
+    datatype: currency
+---
+id: Display real estate net values
+continue button field: user_sees_real_estate_net_values
+question: |
+  Net value of your real estate
+subquestion: |
+  With the numbers you entered, these are the **net** values of your real estate. The net value is what you get when you subtract the amount you owe from the full market value of your real estate.
+  
+  If any of these are not correct, go back a screen or two and change your numbers.
+
+  % for item in real_estate:
+    **${ item.description }** 
+    
+    * Net value = ${ currency(item.net_value) }
+    
+  % endfor
+################ Gathering other assets info ################
+---
+code: |
+  other_assets[i].description
+  other_assets[i].market_value
+  other_assets[i].complete=True
+---
+###To determine the net value### Not needed on form
+#code: |
+#  total = other_assets[i].market_value
+#  total -= other_assets[i].amount_owed
+#  other_assets[i].net_value = total
+---
+id: Other assets
+question: |
+  Other assets -- things that you own
+subquestion: |  
+  These may be things like tools, equipment, recreational vehicles, electronics, stocks, bonds, etc.)? — what about retirement account?
+fields:
+  - "Do you have other assets that you haven't entered already?  -- what about retirement account?": other_assets.there_are_any
+    input type: radio
+    choices:
+      - Yes: True
+      - No: False
+      
+validation code: |
+  if not other_assets.there_are_any:
+    other_assets.target_number = 0
+---
+id: How many other assets
+question: |
+  How many other assets
+fields:      
+  - How many other assets do you have?: other_assets.target_number
+    datatype: integer
+  - note: |
+      We will ask for the value of each.
+    
+---
+id: Describe other asset
+question: |
+  Describe the ${ ordinal(i) } other asset
+subquestion: |
+
+  % if i > 0:
+  You have told us about these other assets already:
+  
+  % for item in other_assets.complete_elements():
+  * ${ item.description }
+  
+  Now tell us about the next asset.
+  % endfor
+  % endif
+fields:     
+  - What is the asset?: other_assets[i].description
+    maxlength: 76
+  - What is it's market value? How much would you get if you sold it?: other_assets[i].market_value
+    maxlength: 76
+    datatype: currency
+---
+id: Display other asset values
+continue button field: user_sees_other_assets_values
+question: |
+  Values of your other assets
+subquestion: |
+  You said these are the values of your other assets.
+  
+  If any of these are not correct, go back a screen or two and change your numbers.
+
+  % for item in other_assets:
+    **${ item.description }** 
+    
+    * Market value = ${ currency(item.market_value) }
+
+    
+  % endfor
+---
+
+
+
+
+###############
 ---
 features:
   css: style.css
@@ -221,10 +367,24 @@ code: |
   # Below sets the user_role by asking a question.
   # You can set user_role directly instead to either 'plaintiff' or 'defendant'
   nav.set_section('intro')
+  assets
   vehicles.there_are_any
   if vehicles.there_are_any: 
     vehicles.gather()
     user_sees_vehicle_net_values
+  real_estate.there_are_any
+  if real_estate.there_are_any: 
+    real_estate.gather()
+    user_sees_real_estate_net_values
+  accounts_cash
+  if accounts_cash:
+    users1_assets_cash_total
+    user_sees_cash_assets_total
+  other_assets.there_are_any
+  if other_assets.there_are_any: 
+    other_assets.gather()
+    user_sees_other_assets_values
+  
   important_notes_to_user
   #user_ask_role
   nav.set_section('case_info')
@@ -261,19 +421,12 @@ code: |
     user_sees_expenses_total
     set_progress(70)
     nav.set_section('assets')
-    assets
-    vehicles
-    if vehicles:
-      users1_assets_vehicles_0_net_value
-      #user_sees_vehicles_net_values
-    real_estate
-    #if real_estate:
-      #users1_assets_real_estate_0_net_value
-      #user_sees_real_estate_net_values
-    accounts_cash
-    users1_assets_cash_total
-    user_sees_cash_assets_total
-    assets_other
+
+
+
+
+    
+    
     set_progress(85)
     nav.set_section('reasons')
     other_reasons_why_cannot_afford
@@ -700,192 +853,9 @@ subquestion: |
   Now we will review the things that you own — your assets or property.
   Click the Next button.
 
----
-#id: Vehicles
-#question: |
-#  Vehicles
-#fields:
-#  - "Do you have a car, truck or other vehicle?": vehicles
-#    datatype: yesnoradio
-#  - "Car / truck / vehicle - description": users1_assets_vehicle_0_description
-#    maxlength: 17
-#    show if: vehicles
-#  - "Car / truck / vehicle - market value": users1_assets_vehicle_0_market_value
-#    datatype: currency
-#    min: 0
-#    show if: vehicles
-#  - "Car / truck / vehicle - amount you owe on it": users1_assets_vehicle_0_amount_owed
-#    datatype: currency
-#    show if: vehicles
-#    min: 0
-#  - "2nd Car / truck / vehicle - description": users1_assets_vehicle_1_description
-#    maxlength: 17
-#    show if: vehicles
-#    required: False
-#  - "2nd Car / truck / vehicle - market value": users1_assets_vehicle_1_market_value
-#    datatype: currency
-#    min: 0
-#    show if: vehicles
-#    required: False
-#  - "2nd Car / truck / vehicle - amount you owe on it": users1_assets_vehicle_1_amount_owed
-#    datatype: currency
-#    show if: vehicles
-#    min: 0
-#    required: False
-#  - "Do you have more vehicles?": vehicles_more
-#    datatype: yesnoradio
-#    show if: vehicles
-#  - "3rd Car / truck / vehicle - description": users1_assets_vehicle_2_description
-#    show if: vehicles_more
-#    maxlength: 17
-#  - "3rd Car / truck / vehicle - market value": users1_assets_vehicle_2_market_value
-#    datatype: currency
-#    show if: vehicles_more
-#    min: 0
-#  - "3rd Car / truck / vehicle - amount you owe on it": users1_assets_vehicle_2_amount_owed
-#    datatype: currency
-#    show if: vehicles_more
-#    min: 0
-#  - "4th Car / truck / vehicle - description": users1_assets_vehicle_3_description
-#    show if: vehicles_more
-#    maxlength: 17
-#    required: False
-#  - "4th Car / truck / vehicle - market value": users1_assets_vehicle_3_market_value
-#    show if: vehicles_more
-#    datatype: currency
-#    min: 0
-#    required: False
-#  - "4th Car / truck / vehicle - amount you owe on it": users1_assets_vehicle_3_amount_owed
-#    datatype: currency
-#    show if: vehicles_more
-#    min: 0
-#    required: False
----
-####To determine the net value for vehicles###
-#mandatory: True
-#code: |
-#  total = users1_assets_vehicle_0_market_value
-#  if defined('users1_assets_vehicle_0_amount_owed'):
-#    total -= users1_assets_vehicle_0_amount_owed
-#  get_total = True
-#  users1_assets_vehicle_0_net_value = total
-#---
-####To determine the net value for vehicles###
-##mandatory: True
-#code: |
-#  total = users1_assets_vehicle_1_market_value
-#  if defined('users1_assets_vehicle_1_amount_owed'):
-#    total -= users1_assets_vehicle_1_amount_owed
-#  get_total = True
-#  users1_assets_vehicle_1_net_value = total
-#---
-####To determine the net value for vehicles###
-##mandatory: True
-#code: |
-#  if defined('users1_assets_vehicle_2_market_value'):
-#    total = users1_assets_vehicle_2_market_value
-#    if defined('users1_assets_vehicle_2_amount_owed'):
-#      total -= users1_assets_vehicle_2_amount_owed
-#    get_total = True
-#    users1_assets_vehicle_2_net_value = total
-#  else:
-#    users1_assets_vehicle_2_net_value = 0
-#---
-####To determine the net value for vehicles###
-##mandatory: True
-#code: |
-#  if defined('users1_assets_vehicle_2_market_value'):
-#    total = users1_assets_vehicle_3_market_value
-#    if defined('users1_assets_vehicle_3_amount_owed'):
-#      total -= users1_assets_vehicle_3_amount_owed
-#    get_total = True
-#    users1_assets_vehicle_3_net_value = total
-#  else:
-#    users1_assets_vehicle_3_net_value = 0    
-#---
-#id: Display vehicle net values
-#mandatory: True
-#continue button field: user_sees_vehicle_net_values
-#question: |
-#  Net value of your vehicles
-#subquestion: |
-#  With the numbers you entered, these are the **net** values of your vehicles. If any of these are not correct, go back one screen.
-#
-#  Vehicle #1 net value: ${ currency(users1_assets_vehicle_0_net_value) }
-#  
-#  % if defined('users1_assets_vehicle_1_market_value'):
-#    Vehicle #2 net value: ${ currency(users1_assets_vehicle_1_net_value) }
-#    
-#  % if defined('users1_assets_vehicle_2_market_value'):
-#    #Vehicle #3 net value: ${ currency(users1_assets_vehicle_2_net_value) }
-#    
-#  % if defined('users1_assets_vehicle_3_market_value'):
-#    Vehicle #4 net value: ${ currency(users1_assets_vehicle_3_net_value) }
 
----
-id: Real estate
-question: |
-  Real estate / property
-fields:
-  - "Do you own a house or other real estate?": real_estate
-    datatype: yesnoradio
-  - "Description of the real estate - house I live in / condo I live in / mobile home I live in / vacation home / home I rent out / etc.": users1_assets_real_estate_0_description
-    maxlength: 17
-    show if: real_estate
-  - "Market value": users1_assets_real_estate_0_market_value
-    datatype: currency
-    min: 0
-    show if: real_estate
-  - "Amount owed on the property": users1_assets_real_estate_0_amount_owed
-    datatype: currency
-    min: 0
-    show if: real_estate
-  - "Do you own more real estate?": real_estate_more
-    datatype: yesnoradio    
-    show if: real_estate
-  - "Description of the real estate - house I live in / condo I live in / mobile home I live in / vacation home / home I rent out / etc.": users1_assets_real_estate_1_description
-    maxlength: 17
-    show if: real_estate_more
-  - "2nd Real estate - market value": users1_assets_real_estate_1_market_value
-    datatype: currency
-    min: 0
-    show if: real_estate_more
-  - "2nd Real estate - amount owed": users1_assets_real_estate_1_amount_owed
-    datatype: currency
-    min: 0
-    show if: real_estate_more
-  - "2nd Real estate - net value": users1_assets_real_estate_1_net_value
-    datatype: currency
-    min: 0
-    show if: real_estate_more
 ---    
-###To determine the net value for real estate###
-mandatory: True
-code: |
-  total = users1_assets_real_estate_0_market_value
-  if defined('users1_assets_real_estate_0_amount_owed'):
-    total -= users1_assets_real_estate_0_amount_owed
-  get_total = True
-  users1_assets_real_estate_0_net_value = total
 
-  total = users1_assets_real_estate_1_market_value
-  if defined('users1_assets_real_estate_1_amount_owed'):
-    total -= users1_assets_real_estate_1_amount_owed
-  get_total = True
-  users1_assets_real_estate_1_net_value = total       
----
-id: Display real estate net values
-mandatory: True
-continue button field: user_sees_real_estate_net_values
-question: |
-  Net value of your property / real estate
-subquestion: |
-  With the numbers you entered, these are the **net** values of your real estate. If any of these are not correct, go back one screen.
-
-  Real estate #1 net value: ${ currency(users1_assets_real_estate_0_net_value) }
-  
-  if defined('users1_assets_vehicle_1_net_value'):
-    Real estate #2 net value: ${ currency(users1_assets_real_estate_1_net_value) }
     
 ---
 id: Bank accounts and cash
@@ -894,18 +864,24 @@ question: |
 fields:
   - "Do you have bank accounts or cash on hand?": accounts_cash
     datatype: yesnoradio
+  - note: |
+      Enter the amounts of the accounts or cash that you have.
+    show if: accounts_cash      
   - "Checking accounts": users1_assets_checking_accounts
     datatype: currency
     min: 0
     show if: accounts_cash
+    required: False
   - "Cash on hand": users1_assets_cash_on_hand
     datatype: currency
     min: 0
     show if: accounts_cash
+    required: False
   - "Savings accounts": users1_assets_savings_accounts
     datatype: currency
     min: 0
     show if: accounts_cash
+    required: False
 ---
 mandatory: True
 code: | 
@@ -913,7 +889,7 @@ code: |
       'users1_assets_cash_on_hand',
       'users1_assets_savings_accounts')
 ---
-id: Total cash assets
+id: Display total cash assets
 mandatory: True
 show if: accounts_cash
 continue button field: user_sees_cash_assets_total
@@ -925,50 +901,50 @@ subquestion: |
        
   If this is not correct, go back one screen.
 ---
-id: Other cash assets
-mandatory: True
-question: |
-  Other assets
-subquestion: |
-  Examples are specialized tools, equipment, recreational vehicles, major electronics, stocks or bonds.
-fields:
-  - "Do you have other assets?": assets_other
-    datatype: yesnoradio
-  - "Description of other asset": users1_assets_other_0_description
-    maxlength: 17
-    show if: assets_other
-  - "Market value": users1_assets_other_0_market_value
-    datatype: currency
-    min: 0
-    show if: assets_other
-  - "Description of 2nd other asset": users1_assets_other_1_description
-    maxlength: 17
-    show if: assets_other
-    required: False
-  - "Market value": users1_assets_other_1_market_value
-    datatype: currency
-    min: 0
-    show if: assets_other
-    required: False
----
-mandatory: True
-code: | 
-  users1_assets_other_total = sum_if_defined('users1_assets_other_0_market_value', 
-      'users1_assets_other_1_market_value')
----
-id: Total other assets
-mandatory: True
-show if: assets_other
-continue button field: user_sees_other_assets_total
-question: |
-  Total other assets
-subquestion: |
-  Examples are specialized tools, equipment, recreational vehicles, major electronics, stocks or bonds.
-  
-  You said that your total other assets are worth:
-    ${ currency(users1_assets_other_total) }
-       
-  If this is not correct, go back one screen.
+#id: Other cash assets
+#mandatory: True
+#question: |
+#  Other assets
+#subquestion: |
+#  Examples are specialized tools, equipment, recreational vehicles, major electronics, stocks or bonds.
+#fields:
+#  - "Do you have other assets?": assets_other
+#    datatype: yesnoradio
+#  - "Description of other asset": users1_assets_other_0_description
+#    maxlength: 17
+#    show if: assets_other
+#  - "Market value": users1_assets_other_0_market_value
+#    datatype: currency
+#    min: 0
+#    show if: assets_other
+#  - "Description of 2nd other asset": users1_assets_other_1_description
+#    maxlength: 17
+#    show if: assets_other
+#    required: False
+#  - "Market value": users1_assets_other_1_market_value
+#    datatype: currency
+#    min: 0
+#    show if: assets_other
+#    required: False
+#---
+#mandatory: True
+#code: | 
+#  users1_assets_other_total = sum_if_defined('users1_assets_other_0_market_value', 
+#      'users1_assets_other_1_market_value')
+#---
+#id: Total other assets
+#mandatory: True
+#show if: assets_other
+#continue button field: user_sees_other_assets_total
+#question: |
+#  Total other assets
+#subquestion: |
+#  Examples are specialized tools, equipment, recreational vehicles, major electronics, stocks or bonds.
+#  
+#  You said that your total other assets are worth:
+#    ${ currency(users1_assets_other_total) }
+#       
+#  If this is not correct, go back one screen.
 ---
 id: More information
 question: |
