--- a/docassemble/VtFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VtFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,15 +1,15 @@
 #############TO-DO LIST#############
 
-# gather and do the math for each net value for assets - did vehicles and real estate
-
+# When we have new job gathering / income gathering code ready, use it here
+# finish putting asset fields in attachment area
+# not sure why my edit screens for assets don't let you edit
+# id: your mailing address - change label to PO Box or street address
+# id: your contact information - borrow code from RFA to collect phone and email
+# update form PDF with updated field names for assets. None are showing.
 # If someone says they don't have unemployment or other income, the interview stops
-
 # Offer overflow sheet for assets as needed
-
 # Finish entering in tooltip text in the PDF
-
-####################################################
-
+# make box get checked if someone enters an asset
 
 
 
@@ -81,7 +81,7 @@ subquestion: |
   % endfor
   % endif
 fields:     
-  - Make and model of the car / truck / vehicle: vehicles[i].description
+  - Make, model and year of the car / truck / vehicle: vehicles[i].description
     maxlength: 76
   - What is it's market value? How much would you get if you sold it?: vehicles[i].market_value
     maxlength: 76
@@ -1167,102 +1167,123 @@ review:
     button: |
       **Assets or property**:
       ${ word(yesno(assets)) }
-  - Edit: users1_assets_vehicle_0_amount_owed
+  - Edit: vehicles.revisit
     button: |
-      **Car / truck / vehicle - amount owed**:
-      ${ currency(users1_assets_vehicle_0_amount_owed) }
-  - Edit: users1_assets_vehicle_0_description
+      **Vehicles**
+
+      % for item in vehicles:
+        **${ item.description }** 
+        
+        * Net value = ${ currency(item.net_value) }
+    
+      % endfor
+
+#  - Edit: users1_assets_vehicle_0_amount_owed
+#    button: |
+#      **Car / truck / vehicle - amount owed**:
+#      ${ currency(users1_assets_vehicle_0_amount_owed) }
+#  - Edit: users1_assets_vehicle_0_description
+#    button: |
+#      **Car / truck / vehicle - description**:
+#      ${ users1_assets_vehicle_0_description }
+#  - Edit: users1_assets_vehicle_0_net_value
+#    button: |
+#      **Car / truck / vehicle - net value**:
+#      ${ currency(users1_assets_vehicle_0_net_value) }
+#  - Edit: users1_assets_vehicle_0_market_value
+#    button: |
+#      **Car / truck / vehicle - market value**:
+#      ${ currency(users1_assets_vehicle_0_market_value) }
+#  - Edit: users1_assets_vehicle_1_description
+#    button: |
+#      **2nd Car / truck / vehicle - description**:
+#      ${ users1_assets_vehicle_1_description }
+#  - Edit: users1_assets_vehicle_1_market_value
+#    button: |
+#      **2nd Car / truck / vehicle - market value**:
+#      ${ currency(users1_assets_vehicle_1_market_value) }
+#  - Edit: users1_assets_vehicle_1_amount_owed
+#    button: |
+#      **2nd Car / truck / vehicle - amount owed**:
+#      ${ currency(users1_assets_vehicle_1_amount_owed) }
+#  - Edit: users1_assets_vehicle_1_net_value
+#    button: |
+#      **2nd Car / truck / vehicle - net value**:
+#      ${ currency(users1_assets_vehicle_1_net_value) }
+#  - Edit: users1_assets_vehicle_2_description
+#    button: |
+#      **3rd Car / truck / vehicle - description**:
+#      ${ users1_assets_vehicle_2_description }
+#  - Edit: users1_assets_vehicle_2_amount_owed
+#    button: |
+#      **3rd Car / truck / vehicle - amount owed**:
+#      ${ currency(users1_assets_vehicle_2_amount_owed) }
+#  - Edit: users1_assets_vehicle_2_net_value
+#    button: |
+#      **3rd Car / truck / vehicle - net value**:
+#      ${ currency(users1_assets_vehicle_2_net_value) }
+#  - Edit: users1_assets_vehicle_2_market_value
+#    button: |
+#      **3rd Car / truck / vehicle - market value**:
+#      ${ currency(users1_assets_vehicle_2_market_value) }
+#  - Edit: users1_assets_vehicle_3_description
+#    button: |
+#      **4th Car / truck / vehicle - description**:
+#      ${ users1_assets_vehicle_3_description }
+#  - Edit: users1_assets_vehicle_3_market_value
+#    button: |
+#      **4th Car / truck / vehicle - market value**:
+#      ${ currency(users1_assets_vehicle_3_market_value) }
+#  - Edit: users1_assets_vehicle_3_amount_owed
+#    button: |
+#      **4th Car / truck / vehicle - amount owed**:
+#      ${ currency(users1_assets_vehicle_3_amount_owed) }
+#  - Edit: users1_assets_vehicle_3_net_value
+#    button: |
+#      **4th Car / truck / vehicle - net value**:
+#      ${ currency(users1_assets_vehicle_3_net_value) }
+  - Edit: real_estate.revisit
     button: |
-      **Car / truck / vehicle - description**:
-      ${ users1_assets_vehicle_0_description }
-  - Edit: users1_assets_vehicle_0_net_value
-    button: |
-      **Car / truck / vehicle - net value**:
-      ${ currency(users1_assets_vehicle_0_net_value) }
-  - Edit: users1_assets_vehicle_0_market_value
-    button: |
-      **Car / truck / vehicle - market value**:
-      ${ currency(users1_assets_vehicle_0_market_value) }
-  - Edit: users1_assets_vehicle_1_description
-    button: |
-      **2nd Car / truck / vehicle - description**:
-      ${ users1_assets_vehicle_1_description }
-  - Edit: users1_assets_vehicle_1_market_value
-    button: |
-      **2nd Car / truck / vehicle - market value**:
-      ${ currency(users1_assets_vehicle_1_market_value) }
-  - Edit: users1_assets_vehicle_1_amount_owed
-    button: |
-      **2nd Car / truck / vehicle - amount owed**:
-      ${ currency(users1_assets_vehicle_1_amount_owed) }
-  - Edit: users1_assets_vehicle_1_net_value
-    button: |
-      **2nd Car / truck / vehicle - net value**:
-      ${ currency(users1_assets_vehicle_1_net_value) }
-  - Edit: users1_assets_vehicle_2_description
-    button: |
-      **3rd Car / truck / vehicle - description**:
-      ${ users1_assets_vehicle_2_description }
-  - Edit: users1_assets_vehicle_2_amount_owed
-    button: |
-      **3rd Car / truck / vehicle - amount owed**:
-      ${ currency(users1_assets_vehicle_2_amount_owed) }
-  - Edit: users1_assets_vehicle_2_net_value
-    button: |
-      **3rd Car / truck / vehicle - net value**:
-      ${ currency(users1_assets_vehicle_2_net_value) }
-  - Edit: users1_assets_vehicle_2_market_value
-    button: |
-      **3rd Car / truck / vehicle - market value**:
-      ${ currency(users1_assets_vehicle_2_market_value) }
-  - Edit: users1_assets_vehicle_3_description
-    button: |
-      **4th Car / truck / vehicle - description**:
-      ${ users1_assets_vehicle_3_description }
-  - Edit: users1_assets_vehicle_3_market_value
-    button: |
-      **4th Car / truck / vehicle - market value**:
-      ${ currency(users1_assets_vehicle_3_market_value) }
-  - Edit: users1_assets_vehicle_3_amount_owed
-    button: |
-      **4th Car / truck / vehicle - amount owed**:
-      ${ currency(users1_assets_vehicle_3_amount_owed) }
-  - Edit: users1_assets_vehicle_3_net_value
-    button: |
-      **4th Car / truck / vehicle - net value**:
-      ${ currency(users1_assets_vehicle_3_net_value) }
-  - Edit: users1_assets_real_estate_0_description
-    button: |
-      **Real estate - description**:
-      ${ users1_assets_real_estate_0_description }
-  - Edit: users1_assets_real_estate_0_amount_owed
-    button: |
-      **Real estate - amount owed**:
-      ${ currency(users1_assets_real_estate_0_amount_owed) }
-  - Edit: users1_assets_real_estate_0_net_value
-    button: |
-      **Real estate - net value**:
-      ${ currency(users1_assets_real_estate_0_net_value) }
-  - Edit: users1_assets_real_estate_0_market_value
-    button: |
-      **Real estate - market value**:
-      ${ currency(users1_assets_real_estate_0_market_value) }
-  - Edit: users1_assets_real_estate_1_description
-    button: |
-      **2nd Real estate - description**:
-      ${ users1_assets_real_estate_1_description }
-  - Edit: users1_assets_real_estate_1_market_value
-    button: |
-      **2nd Real estate - market value**:
-      ${ currency(users1_assets_real_estate_1_market_value) }
-  - Edit: users1_assets_real_estate_1_amount_owed
-    button: |
-      **2nd Real estate - amount owed**:
-      ${ currency(users1_assets_real_estate_1_amount_owed) }
-  - Edit: users1_assets_real_estate_1_net_value
-    button: |
-      **2nd Real estate - net value**:
-      ${ currency(users1_assets_real_estate_1_net_value) }
+      **Real estate**
+
+      % for item in real_estate:
+        **${ item.description }** 
+        
+        * Net value = ${ currency(item.net_value) }
+        
+        % endfor
+#  - Edit: users1_assets_real_estate_0_description
+#    button: |
+#      **Real estate - description**:
+#      ${ users1_assets_real_estate_0_description }
+#  - Edit: users1_assets_real_estate_0_amount_owed
+#    button: |
+#      **Real estate - amount owed**:
+#      ${ currency(users1_assets_real_estate_0_amount_owed) }
+#  - Edit: users1_assets_real_estate_0_net_value
+#    button: |
+#      **Real estate - net value**:
+#      ${ currency(users1_assets_real_estate_0_net_value) }
+#  - Edit: users1_assets_real_estate_0_market_value
+#    button: |
+#      **Real estate - market value**:
+#      ${ currency(users1_assets_real_estate_0_market_value) }
+#  - Edit: users1_assets_real_estate_1_description
+#    button: |
+#      **2nd Real estate - description**:
+#      ${ users1_assets_real_estate_1_description }
+#  - Edit: users1_assets_real_estate_1_market_value
+#    button: |
+#      **2nd Real estate - market value**:
+#      ${ currency(users1_assets_real_estate_1_market_value) }
+#  - Edit: users1_assets_real_estate_1_amount_owed
+#    button: |
+#      **2nd Real estate - amount owed**:
+#      ${ currency(users1_assets_real_estate_1_amount_owed) }
+#  - Edit: users1_assets_real_estate_1_net_value
+#    button: |
+#      **2nd Real estate - net value**:
+#      ${ currency(users1_assets_real_estate_1_net_value) }
   - Edit: users1_assets_checking_accounts
     button: |
       **Checking accounts**:
@@ -1447,13 +1468,13 @@ attachments:
       - "assets_yes": ${ (vehicles or vehicles_more or real_estate or real_estate_more or accounts_cash or assets_other) }  
       - "assets_no": ${ not (vehicles or vehicles_more or real_estate or real_estate_more or accounts_cash or assets_other) }
 ######   
-      - "users1_assets_vehicle_0_amount_owed": ${ currency(users1_assets_vehicle_0_amount_owed) }
-      - "users1_assets_vehicle_0_description": ${ users1_assets_vehicle_0_description }
-      - "users1_assets_vehicle_0_net_value": ${ currency(users1_assets_vehicle_0_net_value) }
-      - "users1_assets_vehicle_0_market_value": ${ currency(users1_assets_vehicle_0_market_value) }
-      - "users1_assets_vehicle_1_description": ${ users1_assets_vehicle_1_description }
-      - "users1_assets_vehicle_1_market_value": ${ currency(users1_assets_vehicle_1_market_value) }
-      - "users1_assets_vehicle_1_amount_owed": ${ currency(users1_assets_vehicle_1_amount_owed) }
+      - "users1_assets_vehicle_0_amount_owed": ${ currency(vehicles[0].amount_owed) }
+      - "users1_assets_vehicle_0_description": ${ vehicles[0].description }
+      - "users1_assets_vehicle_0_net_value": ${ currency(vehicles[0].net_value) }
+      - "users1_assets_vehicle_0_market_value": ${ currency(vehicles[0].market_value) }
+      - "users1_assets_vehicle_1_description": ${ vehicles[1].description }
+      - "users1_assets_vehicle_1_market_value": ${ currency(vehicles[1].market_value) }
+      - "users1_assets_vehicle_1_amount_owed": ${ currency(vehicles[1].amount_owed) }
       - "users1_assets_vehicle_1_net_value": ${ currency(users1_assets_vehicle_1_net_value) }
       - "users1_assets_vehicle_2_description": ${ users1_assets_vehicle_2_description }
       - "users1_assets_vehicle_2_amount_owed": ${ currency(users1_assets_vehicle_2_amount_owed) }
@@ -1463,11 +1484,11 @@ attachments:
       - "users1_assets_vehicle_3_market_value": ${ currency(users1_assets_vehicle_3_market_value) }
       - "users1_assets_vehicle_3_amount_owed": ${ currency(users1_assets_vehicle_3_amount_owed) }
       - "users1_assets_vehicle_3_net_value": ${ currency(users1_assets_vehicle_3_net_value) }
-      - "users1_assets_real_estate_0_description": ${ users1_assets_real_estate_0_description }
-      - "users1_assets_real_estate_0_amount_owed": ${ currency(users1_assets_real_estate_0_amount_owed) }
-      - "users1_assets_real_estate_0_net_value": ${ currency(users1_assets_real_estate_0_net_value) }
-      - "users1_assets_real_estate_0_market_value": ${ currency(users1_assets_real_estate_0_market_value) }
-      - "users1_assets_real_estate_1_description": ${ users1_assets_real_estate_1_description }
+      - "users1_assets_real_estate_0_description": ${ real_estate[0].description }
+      - "users1_assets_real_estate_0_amount_owed": ${ currency(real_estate[0].amount_owed) }
+      - "users1_assets_real_estate_0_net_value": ${ currency(real_estate[0].net_value) }
+      - "users1_assets_real_estate_0_market_value": ${ currency(real_estate[0].market_value) }
+      - "users1_assets_real_estate_1_description": ${ real_estate[1].description }
       - "users1_assets_real_estate_1_market_value": ${ currency(users1_assets_real_estate_1_market_value) }
       - "users1_assets_real_estate_1_amount_owed": ${ currency(users1_assets_real_estate_1_amount_owed) }
       - "users1_assets_real_estate_1_net_value": ${ currency(users1_assets_real_estate_1_net_value) }
@@ -1475,10 +1496,10 @@ attachments:
       - "users1_assets_cash_on_hand": ${ currency(users1_assets_cash_on_hand) }
       - "users1_assets_savings_accounts": ${ currency(users1_assets_savings_accounts) }
       - "users1_assets_cash_total": ${ currency(users1_assets_cash_total) }
-      - "users1_assets_other_0_market_value": ${ currency(users1_assets_other_0_market_value) }
-      - "users1_assets_other_0_market_value": ${ currency(users1_assets_other_0_market_value) }
-      - "users1_assets_other_0_description": ${ users1_assets_other_0_description }
-      - "users1_assets_other_1_description": ${ users1_assets_other_1_description }
+      - "users1_assets_other_0_market_value": ${ currency(other_assets[0].market_value) }
+      - "users1_assets_other_0_description": ${ other_assets[0].description }
+      - "users1_assets_other_1_market_value": ${ currency(other_assets[1].market_value) }
+      - "users1_assets_other_1_description": ${ other_assets[1].description }
       - "other_reasons_why_cannot_afford": ${VT_fee_waiver_attachment.safe_value("other_reasons_why_cannot_afford")}
       - "signature_date": ${ signature_date }
       - "users1_signature": ${ users[0].signature_if_final(i) }
